maze.lessons.maze.island.IslandMaze.scala.code
override def run() {    while(!estSurBiscuit()){
    
    if (random3() == 0) {droite()}
    if (random3() ==1 && !estFaceMur()) {avance()}
    if (random3() == 2) {gauche()} 
}
prendBiscuit();
}
